--- a/app/src/main/res/layout/fragment_show_details.xml
+++ b/app/src/main/res/layout/fragment_show_details.xml
@@ -4,7 +4,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="duviwin.compudocapp.OpdrachtDetails.ShowDetailsActivityFragment"
+    tools:context="duviwin.compudocapp.opdrachtDetails.ShowDetailsActivityFragment"
     tools:showIn="@layout/activity_show_details"
     android:textIsSelectable="true"
     >
