--- a/app/src/main/res/layout/opdracht_item.xml
+++ b/app/src/main/res/layout/opdracht_item.xml
@@ -12,8 +12,8 @@
         android:orientation="vertical"
         android:layout_width="0dp"
         android:layout_weight="2"
-        android:layout_height="wrap_content"
-        android:id="@+id/opdracht_item_left">
+        android:layout_height="match_parent"
+       >
         <TextView
             android:id="@+id/opdracht_item_opdrNr"
             android:layout_width="match_parent"
@@ -28,17 +28,24 @@
             />
 
     </LinearLayout>
-    <TextView
-        android:id="@+id/opdracht_item_korteUitleg"
+
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_weight="6"
-        android:text="mid" />
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/opdracht_item_korteUitleg"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="mid" />
+    </LinearLayout>
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:orientation="vertical"
         android:layout_width="0dp"
         android:layout_weight="1.5"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:id="@+id/opdracht_item_right"
         >
         <TextView
@@ -50,7 +57,7 @@
         <TextView
             android:id="@+id/opdracht_item_tijdVoorBod"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:text="right_bot"
             />
 
