--- a/app/src/main/res/layout/opdracht_item.xml
+++ b/app/src/main/res/layout/opdracht_item.xml
@@ -33,13 +33,14 @@
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="6"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        >
 
         <TextView
             android:id="@+id/opdracht_item_korteUitleg"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="mid" />
+             />
     </LinearLayout>
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:orientation="vertical"
