--- a/app/src/main/res/layout/fragment_show_details.xml
+++ b/app/src/main/res/layout/fragment_show_details.xml
@@ -36,7 +36,8 @@
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
-           android:weightSum="1">
+           android:weightSum="1"
+           >
 
            <TextView
                android:layout_width="0dp"
@@ -85,40 +86,47 @@
            
            android:id="@+id/det_owner"
            />
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:onClick="openMaps"
+            >
        <TextView
            android:id="@+id/det_straat"
-           android:layout_width="wrap_content"
-           android:layout_height="wrap_content"
-           />
-       <LinearLayout
-           android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
-           android:layout_gravity="center_horizontal"
-           android:weightSum="1"
-           android:onClick="openMaps"
-           >
+           />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:orientation="horizontal"
+                android:weightSum="1">
 
 
+                <TextView
+                    android:id="@+id/det_postcode"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
 
-           <TextView
-               android:id="@+id/det_postcode"
-               android:layout_width="wrap_content"
-               android:layout_height="wrap_content"
-                />
-           <TextView
-               android:layout_width="wrap_content"
-               android:layout_height="wrap_content"
-               android:text=" " />
-           <TextView
-               android:id="@+id/det_stad"
-               android:layout_width="match_parent"
-               android:layout_height="wrap_content"
-               android:textStyle="bold"
-                />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text=" " />
 
-       </LinearLayout>
-    <LinearLayout
+                <TextView
+                    android:id="@+id/det_stad"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textStyle="bold" />
+
+            </LinearLayout>
+        </LinearLayout>
+
+       <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -193,21 +201,18 @@
                android:layout_height="wrap_content"
                android:text="@string/min_bod"
 
-           />
+               />
+
            <EditText
                android:id="@+id/min_bod"
-               android:layout_width="200dp"
+               android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:ems="10"
                android:inputType="number" />
        </LinearLayout>
-       <TextView
-           android:layout_width="wrap_content"
-           android:layout_height="wrap_content"
-           android:text="@string/max_bod"
-           />
+
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
@@ -215,22 +220,28 @@
            android:orientation="horizontal"
            android:weightSum="1">
 
+           <TextView
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content"
+               android:text="@string/max_bod" />
+
            <EditText
                android:id="@+id/max_bod"
-               android:layout_width="200dp"
+               android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:ems="10"
                android:inputType="number" />
-           <Button
-               android:layout_width="wrap_content"
-               android:layout_height="wrap_content"
-               android:text="@string/stuur_bod"
-               android:onClick="bieden"
-               android:id="@+id/bied_knop"
-               />
        </LinearLayout>
+
+       <Button
+           android:layout_width="match_parent"
+           android:layout_height="wrap_content"
+           android:text="@string/stuur_bod"
+           android:onClick="bieden"
+           android:id="@+id/bied_knop"
+           />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
