--- a/app/src/main/res/layout/fragment_show_details.xml
+++ b/app/src/main/res/layout/fragment_show_details.xml
@@ -142,7 +142,12 @@
            android:layout_height="wrap_content"
            />
     </LinearLayout>
-
+       <LinearLayout
+           android:layout_width="match_parent"
+           android:layout_height="wrap_content"
+           android:orientation="vertical"
+           android:id="@+id/enkel_voor_open"
+           >
        <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
@@ -190,6 +195,7 @@
                android:layout_height="wrap_content"
                />
        </LinearLayout>
+
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
@@ -247,7 +253,7 @@
            android:layout_height="wrap_content"
            android:id="@+id/det_bod_result"
            />
-
+</LinearLayout>
 
    </LinearLayout>
 </ScrollView>
