--- a/app/src/main/res/layout/fragment_show_details.xml
+++ b/app/src/main/res/layout/fragment_show_details.xml
@@ -86,49 +86,63 @@
            
            android:id="@+id/det_owner"
            />
-        <LinearLayout
-            android:orientation="vertical"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:onClick="openMaps"
-            >
-       <TextView
-           android:id="@+id/det_straat"
-           android:layout_width="match_parent"
-           android:layout_height="wrap_content"
-           />
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:orientation="horizontal"
-                android:weightSum="1">
-
-
-                <TextView
-                    android:id="@+id/det_postcode"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text=" " />
-
-                <TextView
-                    android:id="@+id/det_stad"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:textStyle="bold" />
-
-            </LinearLayout>
-        </LinearLayout>
 
        <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
+           android:layout_width="match_parent"
+           android:layout_height="wrap_content"
+           android:layout_gravity="center_vertical"
+           android:onClick="openMaps"
+           android:orientation="horizontal"
+           android:gravity="center">
+           <ImageView
+               android:layout_width="wrap_content"
+               android:layout_height="match_parent"
+               android:src="@android:drawable/ic_dialog_map"
+               android:background="#32000000"
+               android:layout_margin="3dp" />
+
+           <LinearLayout
+               android:layout_width="match_parent"
+               android:layout_height="wrap_content"
+               android:layout_gravity="center_horizontal"
+               android:orientation="vertical">
+
+               <TextView
+                   android:id="@+id/det_straat"
+                   android:layout_width="match_parent"
+                   android:layout_height="wrap_content" />
+
+               <LinearLayout
+                   android:layout_width="match_parent"
+                   android:layout_height="wrap_content"
+                   android:layout_gravity="center_horizontal"
+                   android:orientation="horizontal"
+                   android:weightSum="1">
+
+
+                   <TextView
+                       android:id="@+id/det_postcode"
+                       android:layout_width="wrap_content"
+                       android:layout_height="wrap_content" />
+
+                   <TextView
+                       android:layout_width="wrap_content"
+                       android:layout_height="wrap_content"
+                       android:text=" " />
+
+                   <TextView
+                       android:id="@+id/det_stad"
+                       android:layout_width="match_parent"
+                       android:layout_height="wrap_content"
+                       android:textStyle="bold" />
+
+               </LinearLayout>
+           </LinearLayout>
+       </LinearLayout>
+
+       <LinearLayout
+           android:layout_width="match_parent"
+           android:orientation="horizontal"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:weightSum="1">
