--- a/app/src/main/res/xml/pref_general.xml
+++ b/app/src/main/res/xml/pref_general.xml
@@ -1,5 +1,7 @@
-<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
-
+<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
+    >
+<PreferenceCategory
+    android:title="Press back key when ready">
     <EditTextPreference
 
         android:key="userNameKey"
@@ -20,6 +22,6 @@
         android:maxLines="1"
         android:password="true"/>
 
-
+</PreferenceCategory>
 
 </PreferenceScreen>
