--- a/app/src/main/res/layout/fragment_caller.xml
+++ b/app/src/main/res/layout/fragment_caller.xml
@@ -2,7 +2,7 @@
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-
+    android:onClick="bellen"
     android:gravity="center_vertical"
     >
 
@@ -17,8 +17,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/telnr"
-
-        android:autoLink="phone"
         android:textSize="20dp" />
 
 </LinearLayout>
