Fix voor kleur van gepost op, als een opdracht al gestart is wordt om de kleur te bepalen naar gestart op ipv de huidige tijd gekeken

--- a/app/src/main/res/layout/fragment_show_details.xml
+++ b/app/src/main/res/layout/fragment_show_details.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
 
     android:textIsSelectable="true"
-    tools:context="duviwin.compudocapp.OpdrachtDetails.ShowDetailsActivityFragment"
+    tools:context="duviwin.compudocapp.opdracht_details.ShowDetailsActivityFragment"
     tools:showIn="@layout/activity_show_details">
 
     <ScrollView
