--- a/app/src/main/res/layout/activity_show_details.xml
+++ b/app/src/main/res/layout/activity_show_details.xml
@@ -1,5 +1,5 @@
 <fragment xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:id="@+id/fragment"
-    android:name="duviwin.compudocapp.OpdrachtDetails.ShowDetailsActivityFragment"
+    android:name="duviwin.compudocapp.opdracht_details.ShowDetailsActivityFragment"
     tools:layout="@layout/fragment_show_details" android:layout_width="match_parent"
     android:layout_height="match_parent" />
