--- a/app/src/main/res/layout/fragment_afspr_item.xml
+++ b/app/src/main/res/layout/fragment_afspr_item.xml
@@ -1,12 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <TextView
-         android:layout_width="fill_parent"
-         android:layout_height="wrap_content"
-         android:id="@+id/afspr_eind_uur"
-         />
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:padding="5dp"
+    >
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#ffffff"
+        android:orientation="vertical"
+        android:padding="5dp"
+
+        >
     <TextView
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
@@ -36,10 +42,18 @@
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:id="@+id/afspr_datum_en_tijd"
-         />
+         android:textStyle="bold"
+        />
+    <TextView
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/afspr_eind_uur"
+        android:textStyle="bold"
+        />
     <TextView
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:id="@+id/afspr_opmerking"
          />
+        </LinearLayout>
 </LinearLayout>
