--- a/app/src/main/res/layout/fragment_afspr_item.xml
+++ b/app/src/main/res/layout/fragment_afspr_item.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+    android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="5dp"
     >
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
+        android:layout_weight="2"
         android:layout_height="match_parent"
         android:background="#ffffff"
         android:orientation="vertical"
@@ -28,21 +28,32 @@
          android:layout_height="wrap_content"
          android:id="@+id/afspr_tel_nrs"
          />
+
+        </LinearLayout>
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_weight="3"
+        android:layout_height="match_parent"
+        android:background="#ffffff"
+        android:orientation="vertical"
+        android:padding="5dp"
+
+        >
     <TextView
-         android:layout_width="fill_parent"
-         android:layout_height="wrap_content"
-         android:id="@+id/afspr_straat_en_nr"
-         />
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/afspr_straat_en_nr"
+        />
     <TextView
-         android:layout_width="fill_parent"
-         android:layout_height="wrap_content"
-         android:id="@+id/afspr_postcode_en_stad"
-         />
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/afspr_postcode_en_stad"
+        />
     <TextView
-         android:layout_width="fill_parent"
-         android:layout_height="wrap_content"
-         android:id="@+id/afspr_datum_en_tijd"
-         android:textStyle="bold"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/afspr_datum_en_tijd"
+        android:textStyle="bold"
         />
     <TextView
         android:layout_width="fill_parent"
@@ -51,9 +62,9 @@
         android:textStyle="bold"
         />
     <TextView
-         android:layout_width="fill_parent"
-         android:layout_height="wrap_content"
-         android:id="@+id/afspr_opmerking"
-         />
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/afspr_opmerking"
+        />
         </LinearLayout>
 </LinearLayout>
